fixed horizontal scroll - skill icons

--- a/styles/scss/_main.scss
+++ b/styles/scss/_main.scss
@@ -203,7 +203,7 @@ nav {
 .skillIcons {
 	display: grid;
 	grid-template-columns: repeat(4, 1fr);
-	gap: 20px 50px;
+	gap: 10px 40px;
 	color: $black;
 	font-size: clamp(4rem, 5vw, 5rem);
 	li {
