--- a/styles/scss/_mediaQueries.scss
+++ b/styles/scss/_mediaQueries.scss
@@ -128,6 +128,10 @@
 		}
 	}
 
+	.skillIcons {
+		grid-template-columns: repeat(3, 1fr);
+	}
+
 	form {
 		width: 100%;
 		margin-top: 40px;
